--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="purple">#ff6750a4</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="color_radio_usb_checked_color">#FFFF0000</color>
+    <color name="color_radio_usb_normal_color">#888888</color>
 </resources>
