--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,14 @@
     </style>
 
     <style name="Theme.DevBox" parent="Base.Theme.DevBox" />
+
+    <style name="UsbRadioButtonColorStyle" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/color_radio_usb_normal_color</item>
+        <item name="colorControlActivated">@color/color_radio_usb_checked_color</item>
+    </style>
+
+    <style name="UsbDebuggingRadioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:textColor">@drawable/sel_radio_usb_debugging_text</item>
+        <item name="android:theme">@style/UsbRadioButtonColorStyle</item>
+    </style>
 </resources>
